erDiagram
  USERS {
    UUID id PK
    STRING username
    STRING email
    STRING preferredName
    STRING avatar
    TIMESTAMP createdAt
    TIMESTAMP updatedAt
  }
  GALLERY_ALBUMS {
    UUID id PK
    UUID userId FK
    STRING title
    STRING description
    UUID coverImageId FK
    TIMESTAMP createdAt
    TIMESTAMP lastUpdatedAt
  }
  GALLERY_IMAGES {
    UUID id PK
    UUID userId FK
    STRING title
    STRING description
    JSONB tags
    STRING imageUrl
    UUID albumId FK
    BOOLEAN flagged
    TIMESTAMP createdAt
    TIMESTAMP lastUpdatedAt
  }
  GALLERY_FLAGS {
    UUID id PK
    UUID imageId FK
    UUID userId FK
    STRING reason
    TIMESTAMP createdAt
    TIMESTAMP lastUpdatedAt
  }
  MOC_INSTRUCTIONS {
    UUID id PK
    UUID userId FK
    STRING title
    STRING description
    JSONB tags
    STRING thumbnailUrl
    TIMESTAMP createdAt
    TIMESTAMP updatedAt
  }
  MOC_FILES {
    UUID id PK
    UUID mocId FK
    STRING fileType
    STRING fileUrl
    STRING originalFilename
    STRING mimeType
    TIMESTAMP createdAt
  }
  MOC_GALLERY_IMAGES {
    UUID id PK
    UUID mocId FK
    UUID galleryImageId FK
  }
  MOC_GALLERY_ALBUMS {
    UUID id PK
    UUID mocId FK
    UUID galleryAlbumId FK
  }

  USERS ||--o{ GALLERY_ALBUMS : owns
  USERS ||--o{ GALLERY_IMAGES : uploads
  USERS ||--o{ GALLERY_FLAGS : flags
  GALLERY_ALBUMS ||--o{ GALLERY_IMAGES : contains
  GALLERY_IMAGES ||--o{ GALLERY_FLAGS : is_flagged_by
  MOC_INSTRUCTIONS ||--o{ MOC_FILES : has
  MOC_INSTRUCTIONS ||--o{ MOC_GALLERY_IMAGES : links
  MOC_INSTRUCTIONS ||--o{ MOC_GALLERY_ALBUMS : links
  GALLERY_IMAGES ||--o{ MOC_GALLERY_IMAGES : linked_by
  GALLERY_ALBUMS ||--o{ MOC_GALLERY_ALBUMS : linked_by 